--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
         footer img{
                 width: 90% !important;
             }
+
+            hr{
+                font-size: 12px;
+                margin-right: 5%;
+            }
     }
 
     </style>
