--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             display: block;
             height: 100%;
             width: 1px;
-            background-color: black; /* adjust color as needed */
-            margin-left: 10px; /* adjust spacing as needed */
+            background-color: black; 
+            margin-left: 10px; 
         }
 
         .dados3 {
@@ -102,20 +102,20 @@
             display: block;
             height: 100%;
             width: 1px;
-            background-color: black; /* adjust color as needed */
-            margin-left: 10px; /* adjust spacing as needed */
+            background-color: black; 
+            margin-left: 10px; 
         }
 
         .separator {
             margin-top: 11px !important;
             width: 2px;
-            height: 20px; /* adjust height as needed */
-            background-color: white; /* adjust color as needed */
-            margin: 0 10px; /* adjust spacing as needed */
-            border: none; /* remove default border styles */
+            height: 20px; 
+            background-color: white; 
+            margin: 0 10px; 
+            border: none; 
         }
 
-        @media only screen and (max-width: 600px) { /* Media query para telas menores */
+        @media only screen and (max-width: 600px) { 
             .title img{
                 height: 30%;
             }
@@ -127,7 +127,7 @@
             
             .card {
                 height: 90%;
-                width: 90%; /* Reduz a largura para ocupar mais espaço em telas menores */
+                width: 90%; 
             }
 
             .informations {
